--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-square-payment-form": "^0.7.2",
+    "square": "^9.0.0",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
