Recache and Add Info and Basic Transitions

--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "framer-motion": "^3.9.0",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.5.0",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-square-payment-form": "^0.7.2",
+    "react-transition-group": "^4.4.1",
     "square": "^9.0.0",
     "uuid": "^8.3.2",
     "web-vitals": "^1.1.0"
