--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "4.0.3",
     "react-square-payment-form": "^0.7.2",
     "react-transition-group": "^4.4.1",
+    "shards-react": "^1.0.3",
     "square": "^9.0.0",
     "uuid": "^8.3.2",
     "web-vitals": "^1.1.0"
