--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^5.2.0",
     "react-router-transition": "^2.1.0",
     "react-scripts": "4.0.3",
+    "react-spring": "^8.0.27",
     "react-square-payment-form": "^0.7.2",
     "react-transition-group": "^4.4.1",
     "shards-react": "^1.0.3",
