--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 REACT_APP_SQUARE_APPLICATION_ID=EAAAEDaH0_osczq-96BSrqnaNmCO-r8UifZ_pkCo0iHaCuLuubVujx4NgVhGt_2r
-REACT_APP_SQUARE_SERVICE_ENDPOINT=https://ecbd-demo.netlify.app/checkout
+REACT_APP_SQUARE_SERVICE_ENDPOINT=https://cbd-demo.netlify.app/.netlify/functions/checkout
