Recache and Reorganize

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@testing-library/user-event": "^12.7.3",
     "antd": "^4.13.0",
     "framer-motion": "^3.9.0",
+    "intuit-oauth": "^3.0.2",
     "node-fetch": "^2.6.1",
+    "node-quickbooks": "^2.0.37",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.0",
