--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-google-maps": "9.4.5",
     "react-icons": "^4.2.0",
     "react-image-gallery": "1.0.7",
+    "react-lazyload": "^3.2.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "3.4.1",
     "react-slick": "0.26.1",
