--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "material-kit-pro-react",
-  "version": "1.9.0",
+  "name": "canna-kool-site",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@bennycio/material-ui-pro": "0.0.1",
     "@material-ui/core": "4.10.1",
     "@material-ui/icons": "4.9.1",
     "animate.css": "4.1.0",
     "antd": "^4.14.1",
     "classnames": "2.2.6",
     "history": "4.10.1",
-    "material-ui-pro": "git+https://4521aee087b1ba804547f10b9cb6dd23d65c34c3:x-oauth-basic@github.com/bennycio/material-ui-pro.git",
     "moment": "2.26.0",
     "node-sass": "4.14.1",
     "nouislider": "14.5.0",
