--- a/package.json
+++ b/package.json
@@ -3,11 +3,10 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@bennycio/material-ui-pro": "0.0.1",
-    "@material-ui/core": "4.10.1",
-    "@material-ui/icons": "4.9.1",
+    "@bennycio/material-ui-pro": ">=0.0.7",
+    "@material-ui/core": ">=4.10.1",
+    "@material-ui/icons": ">=4.9.1",
     "animate.css": "4.1.0",
-    "antd": "^4.14.1",
     "classnames": "2.2.6",
     "history": "4.10.1",
     "moment": "2.26.0",
@@ -23,7 +22,7 @@
     "react-image-gallery": "1.0.7",
     "react-lazyload": "^3.2.0",
     "react-router-dom": "5.2.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": ">=3.4.1",
     "react-slick": "0.26.1",
     "react-square-payment-form": "^0.7.2",
     "react-swipeable-views": "0.13.9",
