--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-swipeable-views": "0.13.9",
     "react-tagsinput": "3.19.0",
     "react-use": "^17.2.1",
+    "styled-components": "^5.2.1",
     "uuid": "^3.4.0"
   },
   "scripts": {
