About Us Bottom, Minor Adjustments to Animations, Lab Results Table

--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "@material-ui/icons": ">=4.9.1",
     "animate.css": "4.1.0",
     "classnames": "2.2.6",
+    "clsx": "^1.1.1",
     "history": "4.10.1",
+    "match-sorter": "^6.3.0",
     "moment": "2.26.0",
+    "namor": "^2.0.2",
     "node-sass": "4.14.1",
     "nouislider": "14.5.0",
     "prop-types": "15.7.2",
@@ -26,6 +29,7 @@
     "react-slick": "0.26.1",
     "react-square-payment-form": "^0.7.2",
     "react-swipeable-views": "0.13.9",
+    "react-table": "^7.6.3",
     "react-tagsinput": "3.19.0",
     "react-use": "^17.2.1",
     "styled-components": "^5.2.1",
