--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "prop-types": "15.7.2",
     "react": "16.13.1",
     "react-animate-on-scroll": "2.1.5",
+    "react-burger-menu": "^3.0.6",
     "react-datetime": "2.16.3",
     "react-dom": "16.13.1",
     "react-google-maps": "9.4.5",
@@ -34,6 +35,7 @@
     "react-tagsinput": "3.19.0",
     "react-use": "^17.2.3",
     "styled-components": "^5.2.3",
+    "styled-off-canvas": "^1.0.1",
     "uuid": "^3.4.0"
   },
   "scripts": {
