--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.13.1",
     "@bennycio/material-ui-pro": ">=0.0.11",
     "@material-ui/core": ">=4.10.1",
     "@material-ui/icons": ">=4.9.1",
