--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@material-ui/core": ">=4.10.1",
     "@material-ui/icons": ">=4.9.1",
     "animate.css": "4.1.0",
+    "aws-sdk": "^2.892.0",
     "body-scroll-lock": "^3.1.5",
     "classnames": "2.2.6",
     "clsx": "^1.1.1",
