--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_SQUARE_SERVICE_ENDPOINT=https://cbd-demo.netlify.app/.netlify/functions/checkout
-REACT_APP_LAB_RESULTS_ENDPOINT=https://cbd-demo.netlify.app/.netlify/functions/labresults
+REACT_APP_SQUARE_SERVICE_ENDPOINT=/.netlify/functions/checkout
+REACT_APP_LAB_RESULTS_ENDPOINT=/.netlify/functions/labresults
